@@ -1,26 +1,0 @@
-##
-## $Id$
-##
-
-
-include_HEADERS = bsp.h coverhd.h dmv170.h tod.h bspopts.h
-
-tod.h: $(top_srcdir)/../../shared/tod.h
-	cp $< $@
-coverhd.h: $(top_srcdir)/../../shared/include/coverhd.h
-	cp $< $@
-CLEANFILES = tod.h coverhd.h
-
-$(PROJECT_INCLUDE):
-	$(mkinstalldirs) $@
-
-$(PROJECT_INCLUDE)/%.h: %.h
-	$(INSTALL_DATA) $< $@
-
-TMPINSTALL_FILES = $(PROJECT_INCLUDE) \
-    $(include_HEADERS:%=$(PROJECT_INCLUDE)/%)
-
-all-local: $(TMPINSTALL_FILES)
-
-include $(top_srcdir)/../../../../automake/force-preinstall.am
-include $(top_srcdir)/../../../../automake/local.am
